objects/JBCXM__GSProduct__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>JBCXM__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__ParentProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product</label>
        <referenceTo>JBCXM__GSProduct__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__ProductFamily__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Family</label>
        <referenceTo>JBCXM__GSMetaInfo__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>GSProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__SourceId__c</fullName>
        <label>SourceId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GS Product</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GS Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>